--- a/nginx/conf.d/http-reverse-proxy.conf
+++ b/nginx/conf.d/http-reverse-proxy.conf
@@ -15,6 +15,10 @@ server {
         proxy_set_header    Host $http_host;
     }
 
+    #
+    # This location block is only necessary if you intend to use web sockets. This handles 
+    # the HTTP->WebSocket upgrade handshake.
+    #
     location /echo {
         proxy_pass          http://backend;
         proxy_http_version  1.1;
